2012-06-12         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (clean): Add fork.tmp.* to the list.

2012-06-10         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (EXTRA_DIST): Add new files time.awk and time.ok.
	(SHLIB_TESTS): Add time.
	* time.awk, time.ok: New files.

2012-05-29         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (clean): Add readfile.ok to list of files to removed.

2012-05-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (readfile): Revert previous patch, and add comment
	explaining that we need to create readfile.ok on failure so that
	"make diffout" will work properly.
	(ordchr.awk, ordchr.ok): Add more tests to catch type conversion
	problems.

2012-05-25         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (readfile): Don't copy the Makefile over readfile.ok
	if there's a problem.

2012-05-24         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (fmtspcl, include2, incdupe, incdup2, incdupe3): Fix
	paths to work properly when built in another directory.

2012-05-19         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (EXTRA_DIST): Add new files hello.awk, inclib.awk,
	include.awk, include.ok, include2.ok, incdupe.ok, incdupe2.ok and
	incdupe3.ok.
	(GAWK_EXT_TESTS): Add include, include2, incdupe, incdupe2 and incdupe3.
	(include2, incdupe, incdupe2, incdupe3): New tests.
	* badargs.ok: Fix usage message to include new -i option.
	* hello.awk, incdupe.ok, incdupe2.ok, incdupe3.ok, inclib.awk,
	include.awk, include.ok, include2.ok: New files.

2012-05-09         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (jarebug): New test.
	* jarebug.awk, jarebug.in, jarebug.ok: New files.

2012-04-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (VALGRIND): Set to empty to protect against random
	values in the environment.
