@@ -1,3 +1,9 @@
+2012-06-18         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (testext): New test.
+	(clean): Add testext.awk to the list.
+	* testext.ok: New file.
+
 2012-06-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (clean): Add fork.tmp.* to the list.
